# VoxelEGL

./: .clangd  CMakeLists.txt
include/Misc/: camera.hpp  shader.hpp  terrain.hpp
include/glad/: glad.h
shader/: fragment.glsl  vertex.glsl
src/: camera.cpp  glad.c  main.cpp  shader.cpp  terrain.cpp
